# Luarc-AssetManagementSystem

asset_api/: .env.example  .gitignore  README.md  config.py  database.py  logging_config.py  main.py  pyproject.toml  requirements.txt  schema.sql  schemas.py
asset_api/assets/: router.py  service.py
asset_api/auth/: dependencies.py  router.py  service.py
asset_api/tests/: test_concurency.py
